--- a/style.css
+++ b/style.css
@@ -90,10 +90,15 @@
     margin-bottom: 50px;
 }
 
-.content-button {
+.naruto-button {
     width: 120px;
     height: 40px;
-    font-size: 20px;
-    color: white;
     background-color: orange;
+    border-style: solid;
+}
+
+.naruto-link {
+    color: white;
+    font-size: 20px;
+    text-decoration: wavy;
 }
